Correct view, optimization view graph and fix bugs

--- a/Gaussians/MainWindow.xaml
+++ b/Gaussians/MainWindow.xaml
@@ -28,8 +28,6 @@
         <!--TopMenu-->
         <Menu>
             <MenuItem Header="{x:Static res:Resources.MenuFile}">
-                <MenuItem Header="{x:Static res:Resources.MenuOpen}">
-                </MenuItem>
                 <MenuItem ItemsSource="{Binding MenuFileReaders}" Header="{x:Static res:Resources.MenuImportFile}">
                     <MenuItem.ItemTemplate>
                         <HierarchicalDataTemplate ItemsSource="{Binding Value}">
@@ -81,14 +79,14 @@
                 </MenuItem.ItemContainerStyle>
             </MenuItem>
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="{Binding InvokeFunctionName}"/>
-                <ProgressBar Minimum="0" Maximum="100" Value="{Binding InvokeFunctionProgress}" Width="50"/>
             </StackPanel>
         </Menu>
         <!--RunControls-->
         <StackPanel Grid.Row="1" HorizontalAlignment="Left" Orientation="Horizontal">
-            <Button Style="{DynamicResource InvokeButtonStyle}"/>
-            <Button Style="{DynamicResource StopButtonStyle}"/>
+            <Button Style="{DynamicResource InvokeButtonStyle}" Command="{Binding InvokeFunctionGraphCommand}"/>
+            <Button Style="{DynamicResource StopButtonStyle}" Command="{Binding CancelInvokeFunctionGraphCommand}"/>
+            <ProgressBar Minimum="0" Maximum="100" Value="{Binding InvokeFunctionProgress}" Width="100"/>
+            <Label Content="{Binding InvokeFunctionName}"/>
         </StackPanel>
         <!--Body-->
         <Grid Grid.Row="2">
@@ -121,11 +119,11 @@
                                         <StackPanel>
                                             <TextBox Text="{Binding Function.Name}"/>
                                             <TextBlock Text="{x:Static res:Resources.OperationInputs}" HorizontalAlignment="Center"/>
-                                            <ListView ItemsSource="{Binding Function.Inputs}">
+                                            <ListView ItemsSource="{Binding Function.Inputs}" HorizontalAlignment="Stretch" MaxWidth="200">
                                                 <ListView.View>
                                                     <GridView>
                                                         <GridView.Columns>
-                                                            <GridViewColumn Header="{x:Static res:Resources.OperationPropertyName}" DisplayMemberBinding="{Binding Name}"/>
+                                                            <GridViewColumn Header="{x:Static res:Resources.OperationPropertyName}" DisplayMemberBinding="{Binding Name}" Width="auto"/>
                                                             <GridViewColumn Header="{x:Static res:Resources.OperationPropertyValue}">
                                                                 <GridViewColumn.CellTemplate>
                                                                     <DataTemplate>
@@ -190,13 +188,7 @@
                                         </i:Interaction.Triggers>
                                     </TextBlock>
                                     <Button Grid.Column="2" Style="{DynamicResource VisibleGraphButtonStyle}" Command="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=DataContext.SwapVisibleGraphCommand}"
-                                             CommandParameter="{Binding}" Background="{DynamicResource VisibleButtonImage}">
-                                        <Button.Triggers>
-                                            <DataTrigger Binding="{Binding IsVisible}" Value="False">
-                                                <Setter Property="Content" Value="{DynamicResource UnvisibleButtonImage}"/>
-                                            </DataTrigger>
-                                        </Button.Triggers>
-                                        
+                                             CommandParameter="{Binding}">
                                     </Button>
                                 </Grid>
                             </DataTemplate>
